@startuml Class Diagram - Domain Models
' Global settings
skinparam backgroundColor #FEFEFE
skinparam defaultFontSize 11
skinparam defaultFontName Arial

' Vertical orientation for all diagrams
top to bottom direction

' Common styling for notes
skinparam note {
    BackgroundColor #FFFACD
    BorderColor #FFD700
    BorderThickness 1
}

' CLASS_THEME styling
skinparam class {
    BackgroundColor #E6F0FF
    BorderColor #0066CC
    HeaderBackgroundColor #CCE5FF
}
skinparam interface {
    BackgroundColor #F2F2FF
    BorderColor #6666CC
    HeaderBackgroundColor #E6E6FF
}

' Catalog Domain Classes
class Item {
    +int Id
    +string Slug
    +string Name
    +string? Description
    +decimal Price
    +string? PictureFileName
    +int CatalogBrandId
    +int AvailableStock
    +int RestockThreshold
    +int MaxStockThreshold
    +bool OnReorder
    --
    +Brand? CatalogBrand
    +ICollection<Category> Categories
}

class Brand {
    +int Id
    +string Name
    --
    +ICollection<Item> Items
}

class Category {
    +int Id
    +string Name
    --
    +ICollection<Item> Items
}

' Ordering Domain Classes
class Order {
    +int Id
    +DateTime OrderDate
    +Address Address
    +int? BuyerId
    +OrderStatus OrderStatus
    +string Description
    +bool IsRecurring
    +TimeSpan? RecurrenceInterval
    +DateTime? NextRecurrenceDate
    +int? ParentOrderId
    --
    +Buyer Buyer
    +IReadOnlyCollection<OrderItem> OrderItems
    +int? PaymentId
    --
    +static Order NewDraft()
    +static Result<Order> Create(Address, int?, int?)
    +static Result<Order> CreateRecurringOrder(...)
    +Result<Order> CreateRecurringOrderFromExisting(...)
    +Result SetShippedStatus()
    +Result SetCancelledStatus()
    +decimal GetTotal()
}

class OrderItem {
    +int Id
    +string ProductName
    +string PictureUrl
    +decimal UnitPrice
    +decimal Discount
    +int Units
    +int ProductId
    --
    +static Result<OrderItem> Create(int, string, decimal, decimal, string, int)
    +Result SetNewDiscount(decimal)
    +Result AddUnits(int)
}

enum OrderStatus {
    Draft = 0
    Submitted = 1
    AwaitingValidation = 2
    StockConfirmed = 3
    Paid = 4
    Shipped = 5
    Cancelled = 6
}

class Address {
    +int Id
    +string Street
    +string City
    +string State
    +string Country
    +string ZipCode
    --
    +static Result<Address> Create(string, string, string, string, string)
}

class Buyer {
    +int Id
    +string IdentityGuid
    +string Name
    --
    +ICollection<Order> Orders
}

' Basket Domain Classes
class CustomerBasket {
    +int Id
    +Guid BuyerId
    +List<BasketItem> Items
    --
    +CustomerBasket(Guid customerId)
}

class BasketItem {
    +int Id
    +int ProductId
    +string ProductName
    +decimal UnitPrice
    +decimal OldUnitPrice
    +int Quantity
    +string? PictureUrl
}

' Pet Profile Domain Classes
class Pet {
    +int Id
    +int UserId
    +string Name
    +string? Breed
    +DateTime? DateOfBirth
    +string? Gender
    +string? Weight
    +string? PhotoUrl
    +string? MedicalHistory
    +PetStatus Status
    +DateTime CreatedAt
    +DateTime? UpdatedAt
    --
    +User User
    +ICollection<Reminder> Reminders
    --
    +Result CompleteProfile()
    +Result ActivateProfile()
    +Result DeactivateProfile()
    +Result DeleteProfile()
}

enum PetStatus {
    Draft = 0
    Active = 1
    Inactive = 2
    Archived = 3
}

class Reminder {
    +int Id
    +int PetId
    +string Title
    +string? Description
    +DateTime ReminderDate
    +ReminderType Type
    +bool IsCompleted
    +DateTime? CompletedAt
    +DateTime CreatedAt
    --
    +Pet Pet
    --
    +Result MarkAsCompleted()
    +Result UpdateDate(DateTime newDate)
}

enum ReminderType {
    Vaccination = 0
    Medication = 1
    VetVisit = 2
    ParasiteTreatment = 3
    Grooming = 4
    Other = 5
}

' Subscription Domain Classes
class Subscription {
    +int Id
    +int UserId
    +int ItemId
    +int Quantity
    +TimeSpan Interval
    +DateTime StartDate
    +DateTime? NextDeliveryDate
    +SubscriptionStatus Status
    +Address? DeliveryAddress
    +DateTime CreatedAt
    +DateTime? UpdatedAt
    --
    +User User
    +Item Item
    +Address? Address
    --
    +Result Activate()
    +Result Pause()
    +Result Resume()
    +Result Cancel()
    +Result UpdateNextDeliveryDate()
}

enum SubscriptionStatus {
    Created = 0
    Active = 1
    Paused = 2
    Cancelled = 3
}

' User Domain Classes
class User {
    +int Id
    +string IdentityGuid
    +string Email
    +string Name
    +string? PhoneNumber
    +DateTime CreatedAt
    +DateTime? UpdatedAt
    --
    +ICollection<Pet> Pets
    +ICollection<Order> Orders
    +ICollection<Subscription> Subscriptions
}

' Value Objects and Base Classes
interface IRepository<T> {
    +Task<T?> GetByIdAsync(int id)
    +Task<IEnumerable<T>> GetAllAsync()
    +Task AddAsync(T entity)
    +Task UpdateAsync(T entity)
    +Task DeleteAsync(T entity)
}

interface IUnitOfWork {
    +Task<int> SaveChangesAsync()
    +Task BeginTransactionAsync()
    +Task CommitTransactionAsync()
    +Task RollbackTransactionAsync()
}

' Relationships
Order *-- OrderItem : contains
Order *-- Address : has
Order --> Buyer : references

Item --> Brand : references
Item --> Category : references

Brand --> Item : has many
Category --> Item : has many
Buyer --> Order : has many

CustomerBasket *-- BasketItem : contains

Pet --> User : references
Pet *-- Reminder : has many
Pet --> PetStatus : has status
Reminder --> ReminderType : has type
Subscription --> SubscriptionStatus : has status

Subscription --> User : references
Subscription --> Item : references
Subscription --> Address : references
Subscription --> Order : creates

User --> Pet : has many
User --> Subscription : has many
User --> Order : has many
Buyer --> User : corresponds to

' Notes
note right of Item
    **Item (Товар):**
    Центральна сутність каталогу.
    Містить всю інформацію про товар,
    ціни, залишки та відносини.
end note

note right of Order
    **Order (Замовлення):**
    Центральна сутність домену замовлень.
    Містить бізнес-логіку управління
    життєвим циклом замовлення.
end note

note right of OrderStatus
    **OrderStatus:**
    Перелік станів замовлення
    від створення до виконання.
end note

note right of CustomerBasket
    **CustomerBasket (Кошик):**
    Тимчасове сховище товарів
    перед оформленням замовлення.
    Зберігається в Redis.
end note

note right of Pet
    **Pet (Профіль тварини):**
    Центральна сутність домену профілів.
    Містить всю інформацію про тварину
    та нагадування для неї.
end note

note right of Reminder
    **Reminder (Нагадування):**
    Подія для тварини:
    щеплення, ліки, візити до ветеринара.
end note

note right of Subscription
    **Subscription (Підписка):**
    Регулярна доставка товарів
    за заданим інтервалом.
end note

note right of User
    **User (Користувач):**
    Власник тварин, клієнт магазину.
    Центральна сутність для
    зв'язку профілів та замовлень.
end note

@enduml
